compiler/tests/en/errors/bitwise_float.salam
// EXPECT: E021
func main:
    x := 1.5
    println x & 2
end
